- Artifact Authz now gets parameters from entity and service operations
  and if new ArtifactGroupMember.filterMap field is populated checks each
  filter entry to see if it matches corresponding parameter entry,
  otherwise authz rule does not apply
- Added System-System Message functionality with persisted outgoing and
  incoming messages and services to manage queueing, sending, receiving,
  and consuming.
- Added ServiceFacade.callJsonRpc() method to more conveniently call remote
  JSON-RPC services
- XML Screen:
  - Added tree element for XML Screen that renders a lazy-loaded tree with
    links using jstree (currently version 3.0.3); see the wiki.xml screen
    in HiveMind for an example of its use
  - Added section-include element to include a section from another screen
  - Various XML Screen elements have more consistent id behavior with
    string expansion and adding the listEntryIndex suffix, which is now
    also set in section-iterate (in addition to form-list as before)
  - Added container-box to XML Screen with header, toolbar, and body
  - Improved container element in XML Screen with better id handling and
    a type which (in HTML) translates to the tag used.
  - Added @style attributes to link and label in XML Screen
  - In a form-list with no @list-entry attribute creates a
    ${@list}_entry field along with the _index and _has_next fields for
    convenience in getting at the object in the List (which implements the
    Map interface, often an EntityValue and nice to get at it directly)
  - Added form-single.field-layout.field-row-big element to do what
    field-row used to do with more than 2 field-ref elements, putting all
    fields in a single column
  - Put CSS references back in theme instead of direct in webroot.xml
  - Added support for header logo, header title, body class, and footer
    items in theme to make applications easier to brand through theme data
  - Added theme support for header navbar items with FTL snippets coming