@@ -101,23 +101,7 @@ This Work includes contributions authored by David E. Jones, not as a
                 <xs:annotation><xs:documentation>Include the current user in the service call. If you don't want to
                     pass that in set to false. Defaults to true.</xs:documentation></xs:annotation>
             </xs:attribute>
-            <xs:attribute name="transaction" default="use-or-begin">
-                <xs:simpleType>
-                    <xs:restriction base="xs:token">
-                        <xs:enumeration value="ignore">
-                            <xs:annotation><xs:documentation>Don't do anything with transactions (if one is in place
-                                use it, if no transaction in place don't begin one)</xs:documentation></xs:annotation>
-                        </xs:enumeration>
-                        <xs:enumeration value="use-or-begin">
-                            <xs:annotation><xs:documentation>Use active transaction or if no active transaction begin
-                                one</xs:documentation></xs:annotation>
-                        </xs:enumeration>
-                        <xs:enumeration value="force-new"><xs:annotation><xs:documentation>Always being a new
-                            transaction, pausing the active transaction if there is one</xs:documentation></xs:annotation>
-                        </xs:enumeration>
-                    </xs:restriction>
-                </xs:simpleType>
-            </xs:attribute>
+            <xs:attribute name="transaction" default="use-or-begin" type="transaction-options"/>
             <xs:attribute name="transaction-timeout" type="xs:int" default="0">
                 <xs:annotation><xs:documentation>
                     Defines the timeout for the transaction, in seconds.
